--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,84 @@
 /* You can add global styles to this file, and also import other style files */
+/* You can add global styles to this file, and also import other style files */
+
+/* You can add global styles to this file, and also import other style files */
+@font-face {
+  font-family: 'digital';
+  src: url('./assets/fonts/digital/digital-7.ttf');
+}
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+  // This defines what 1rem is
+  font-size: 62.5%;
+}
+
+body {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Share Tech Mono', monospace;
+  font-family: 'Share Tech Mono', monospace;
+  font-weight: 400;
+  font-size: 1.6rem;
+  background-color: #c2c2d6;
+}
+/* Your styles goes here. */
+
+.container {
+  width: 420px;
+  height: 500px;
+  margin: 12.8rem auto 0;
+  background-color: #000;
+  border: 2px solid #47476b;
+  padding: 5px;
+  background: black;
+}
+.screen {
+  font-family: digital;
+  text-align: right;
+  display: flex;
+  flex-direction: column;
+  gap: 3px;
+  margin: 2px 0 3px;
+}
+#formulaScreen {
+  color: orange;
+  height: 24px;
+  font-size: 24px;
+}
+#display {
+  color: #fff;
+  height: 32px;
+  font-size: 32px;
+  font-weight: 500;
+}
+.keys_box {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  input[type="button"] {
+    font-size: 24px;
+    font-weight: 400;
+    font-family: 'Share Tech Mono', monospace;
+  }
+
+  #clear {
+    height: 84px;
+    grid-column: 1/3;
+  }
+  #zero {
+    grid-column: 3/1;
+  }
+  #equals {
+    grid-column: 4/4;
+    grid-row: 4/6;
+  }
+}
